# cli_agent

./: .gitignore  Design.md  README.md  main.py  pyproject.toml
agent/: __init__.py
config/: __init__.py  default.toml  settings.py
cost/: __init__.py
llm/: __init__.py  gemini_provider.py  openai_provider.py  provider.py
project/: __init__.py
sandbox/: __init__.py
tools/: __init__.py
utils/: __init__.py  logger.py
