[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-agent"
version = "0.1.0"
description = "Autonomous CLI agent with intelligent multi-model routing — costs 100x less than Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
cli-agent = "main:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "config", "cost", "llm", "project", "sandbox", "tools", "utils"]
include = ["main.py"]
